add_select_functions

--- a/selenium_doc.ipynb
+++ b/selenium_doc.ipynb
@@ -913,6 +913,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -998,6 +1000,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "\n",
     "# Start Session\n",
@@ -1083,6 +1087,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1158,6 +1164,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1327,6 +1335,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1506,6 +1516,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1629,6 +1640,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1702,6 +1714,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# After you have the collection of elements with the 4 method, you can iterate over them to access the individual elements.\n",
     "\n",
@@ -1752,6 +1765,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the necessary libraries\n",
+    "import pytest\n",
+    "import time\n",
+    "from selenium.common import NoSuchElementException, ElementNotInteractableException\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.wait import WebDriverWait\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "\n",
+    "# Start Session\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get('https://selenium.dev/selenium/web/formPage.html')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1.- Single Select Sample\n",
+    "\n",
+    "# Locates <select> element by its \"name\" attribute\n",
+    "select_element = driver.find_element(By.NAME, 'selectomatic')\n",
+    "# Wraps the web element in a Select object to interact with it\n",
+    "select = Select(select_element)\n",
+    "time.sleep(5)\n",
+    "\n",
+    "# Locating options in the <select> by their CSS selectors\n",
+    "two_element = driver.find_element(By.CSS_SELECTOR, 'option[value=two]')\n",
+    "four_element = driver.find_element(By.CSS_SELECTOR, 'option[value=four]')\n",
+    "count_element = driver.find_element(By.CSS_SELECTOR, \"option[value='still learning how to count, apparently']\")\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Selects an option by the visible text\n",
+    "select.select_by_visible_text('Four')\n",
+    "# Asserts that the 'Four' option is correctly selected\n",
+    "assert four_element.is_selected()\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Selects an option by the value attribute\n",
+    "select.select_by_value('two')\n",
+    "# Asserts that the 'two' option is correctly selected\n",
+    "assert two_element.is_selected()\n",
+    "time.sleep(10)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2.- Multiple Select Sample\n",
+    "# Locates another <select> element by its \"name\" attribute\n",
+    "select_element = driver.find_element(By.NAME, 'multi')\n",
+    "# Wraps this element in a Select object to interact with multiple selections\n",
+    "select = Select(select_element)\n",
+    "time.sleep(5)\n",
+    "\n",
+    "# Locating options by their CSS selector values\n",
+    "ham_element = driver.find_element(By.CSS_SELECTOR, 'option[value=ham]')\n",
+    "gravy_element = driver.find_element(By.CSS_SELECTOR, \"option[value='onion gravy']\")\n",
+    "egg_element = driver.find_element(By.CSS_SELECTOR, 'option[value=eggs]')\n",
+    "sausage_element = driver.find_element(By.CSS_SELECTOR, \"option[value='sausages']\")\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Finds all option elements under the select element\n",
+    "option_elements = select_element.find_elements(By.TAG_NAME, 'option')\n",
+    "# Retrieves all options from the Select wrapper object\n",
+    "option_list = select.options\n",
+    "# Asserts that both lists are identical\n",
+    "assert option_elements == option_list\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Retrieves all currently selected options\n",
+    "selected_option_list = select.all_selected_options\n",
+    "# Defines the expected list of selected elements\n",
+    "expected_selection = [egg_element, sausage_element]\n",
+    "# Asserts the current selection matches the expected\n",
+    "assert selected_option_list == expected_selection\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Selecting options 'ham' and 'onion gravy' by their values\n",
+    "select.select_by_value('ham')\n",
+    "select.select_by_value('onion gravy')\n",
+    "# Asserting that the options are selected\n",
+    "assert ham_element.is_selected()\n",
+    "assert gravy_element.is_selected()\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Deselecting options 'eggs' and 'sausages' by their values\n",
+    "select.deselect_by_value('eggs')\n",
+    "select.deselect_by_value('sausages')\n",
+    "# Asserting that the options are selected\n",
+    "assert not egg_element.is_selected()\n",
+    "assert not sausage_element.is_selected()\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# Close the browser\n",
+    "driver.quit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1785,6 +1898,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1853,6 +1967,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
@@ -1890,6 +2005,7 @@
     "from selenium.webdriver.support.wait import WebDriverWait\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.relative_locator import locate_with\n",
+    "from selenium.webdriver.support.select import Select\n",
     "\n",
     "# Start Session\n",
     "driver = webdriver.Chrome()\n",
